Made adding selected products to basket

--- a/views/partials/index/basket.ejs
+++ b/views/partials/index/basket.ejs
@@ -1,22 +1,10 @@
 <div class="basket_info">
-
-    <div class="product_list">
-        <div class="product_list__item ">
-            <div class="elt_remove">
-                <img src="images/quit.png" alt="">
-            </div>
-            <div class="elt_name">Пирог с яблоком и брусникой и с чемто ещё</div>
-            <div class="elt_weight"> 2kg</div>
-            <div class="elt_price">1500</div>
-        </div>
-
-    </div>
+    <div class="product_list"></div>
     <div class="total_price">
-        <div>Итого : 55500 р.</div>
+        <div class="tpInfo-1">Итого :</div>
+        <div class="total_price__item">0</div>
+        <div class="tpInfo-2">руб.</div>
     </div>
     <button class="b1">Скрыть</button>
     <button class="b2">Оформить</button>
-
-
-
 </div>
