--- a/public/css/page-4.css
+++ b/public/css/page-4.css
@@ -9,6 +9,7 @@ div.page-4 {
     grid-template-areas: ". . . . ." " . . basket_info . ." ". . . . .";
     align-items: center;
     overflow-y: scroll;
+    margin-bottom: auto;
 }
 
 div.page-4 .basket_info {
@@ -24,12 +25,27 @@ div.page-4 .basket_info {
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 50px 50px;
     grid-template-areas: "pList pList" ". total" "b1 b2";
+    margin-bottom: 50px;
 }
 
 .total_price {
     grid-area: total;
     display: grid;
     align-items: center;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-areas: ". . tpInfo1 tpValue tpInfo2";
+}
+
+.tpInfo-1 {
+    grid-area: tpInfo1;
+}
+
+.tpInfo-2 {
+    grid-area: tpInfo2;
+}
+
+.total_price__item {
+    grid-area: tpValue;
 }
 
 .product_list {
@@ -62,8 +78,23 @@ div.page-4 .basket_info button {
     grid-template-columns: 1fr 2.5fr 1fr 1fr;
 }
 
+.product_list__item:hover {
+    box-shadow: 0 0 2px black;
+    background-color: rgba(245, 245, 240, 1);
+}
+
+.elt_remove,
 .elt_remove img {
-    width: 30px;
+    border-radius: 5px;
+}
+
+.elt_remove img {
+    width: 40px;
+    margin: 5px;
+}
+
+.elt_remove img:hover {
+    box-shadow: 0 0 10px red;
 }
 
 .close {
@@ -85,8 +116,8 @@ div.page-4 .basket_info button {
 
 @media screen and (max-width:950px) {
     div.page-4 {
-        grid-template-columns: 1fr 8fr 1fr;
-        grid-template-rows: 1fr 8fr 1fr;
+        grid-template-columns: 10px 1fr 10px;
+        grid-template-rows: 1fr 10fr 1fr;
         grid-template-areas: ". . ." " . basket_info ." ". . .";
         font-size: 16px;
     }
