--- a/views/partials/index/basket.ejs
+++ b/views/partials/index/basket.ejs
@@ -1,10 +1,16 @@
 <div class="basket_info">
     <div class="product_list"></div>
     <div class="total_price">
-        <div class="tpInfo-1">Итого :</div>
+        <div class="delivery">
+            <div class="dlInfo-1">Доставка</div>
+            <div class="dlCost">120</div>
+            <div class="dlInfo-2">руб.</div>
+        </div>
+        <div class="tpInfo-1">Итого:</div>
         <div class="total_price__item">0</div>
         <div class="tpInfo-2">руб.</div>
     </div>
     <button class="b1">Скрыть</button>
-    <button class="b2">Оформить</button>
+    <button class="b2">Очистить</button>
+    <button class="b3">Оформить</button>
 </div>
