--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -7,9 +7,14 @@
 <body>
     <div id="roof"></div>
 
-    <div id="page-4" class="page-4 close">
+    <div id="page-4" class="page-4" style="display:none">
         <%- include('../partials/index/basket.ejs')%>
     </div>
+ 
+    <div id="register_order" class="register_order"  style="display:none">
+        <%- include('../partials/index/register_order.ejs')%>
+    </div>
+
 
     <div class="grid-container">
         <div id="header" class="header">
