--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -3,4 +3,5 @@
 <link rel="stylesheet" type="text/css" href="/css/style.css">
 <link rel="stylesheet" type="text/css" href="/css/navbar.css">
 <link rel="stylesheet" type="text/css" href="/css/page-4.css">
+<link rel="stylesheet" type="text/css" href="/css/register_order.css">
 <link rel="stylesheet" type="text/css" href="/css/basket_button.css">
