Created functional for sending messages to email & telegram

--- a/views/pages/thnx.ejs
+++ b/views/pages/thnx.ejs
@@ -6,7 +6,11 @@
 </head>
 
 <body>
-    THANK YOU FOR ORDER !
+    <h1>
+        Ваши пироги готовятся и скоро будут доставлены. Спасибо.
+    </h1>
+    <a href="/">Вернуться на главную страницу</a>
+
 </body>
 
 </html>
