--- a/views/partials/index/basket.ejs
+++ b/views/partials/index/basket.ejs
@@ -3,8 +3,8 @@
     <div class="total_price">
         <div class="delivery">
             <div class="dlInfo-1">Доставка</div>
-            <div class="dlCost">120</div>
-            <div class="dlInfo-2">руб.</div>
+            <div class="dlCost">150</div>
+            <div class="dlInfo-2"> р.</div>
         </div>
         <div class="tpInfo-1">Итого:</div>
         <div class="total_price__item">0</div>
