--- a/views/partials/product_card.ejs
+++ b/views/partials/product_card.ejs
@@ -11,11 +11,11 @@
         </div>
     </div>
     <div class="weights">
-        <div class="weights_item" data-price="<%=price["price"]["1"]%>">1 кг</div>
-        <div class="weights_item" data-price="<%=price["price"]["1.5"]%>">1.5 кг</div>
-        <div class="weights_item" data-price="<%=price["price"]["2"]%>">2 кг</div>
-        <div class="weights_item" data-price="<%=price["price"]["2.5"]%>">2.5 кг</div>
-        <div class="weights_item" data-price="<%=price["price"]["3"]%>">3 кг</div>
+        <div class="weights_item" data-weight="1" data-price="<%=price["price"]["1"]%>">1 кг</div>
+        <div class="weights_item" data-weight="1.5" data-price="<%=price["price"]["1.5"]%>">1.5 кг</div>
+        <div class="weights_item" data-weight="2" data-price="<%=price["price"]["2"]%>">2 кг</div>
+        <div class="weights_item" data-weight="2.5" data-price="<%=price["price"]["2.5"]%>">2.5 кг</div>
+        <div class="weights_item" data-weight="3" data-price="<%=price["price"]["3"]%>">3 кг</div>
     </div>
     <div class="button-add">
         <div class="btn_add_text cstyle">
