Added src dir. Copied js & css files

--- a/views/partials/index/register_order.ejs
+++ b/views/partials/index/register_order.ejs
@@ -48,6 +48,9 @@
                 <button type="submit" class="ro_buttons__send">Отправить</button>
             </div>
         </form>
+
     </div>
+
+    <div class="ro_footer"></div>
 
 </div>
