--- a/public/css/basket_button.css
+++ b/public/css/basket_button.css
@@ -1,9 +1,1 @@
-div.button_basket img {
-    height: 40px;
-}
-
-@media screen and (max-width:620px) {
-    div.button_basket img {
-        height: 30px;
-    }
-}
+div.button_basket img{height:40px}@media screen and (max-width:620px){div.button_basket img{height:30px}}
