--- a/public/css/page-4.css
+++ b/public/css/page-4.css
@@ -1,162 +1,1 @@
-div.page-4 {
-    position: fixed;
-    display: grid;
-    width: 100vw;
-    height: 100vh;
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: repeat(3, 1fr);
-    z-index: 2;
-    background-color: rgba(180, 180, 180, 0.9);
-    grid-template-areas: ". . . . ." " . . basket_info . ." ". . . . .";
-    align-items: center;
-    overflow-y: scroll;
-    margin-bottom: auto;
-}
-
-div.page-4 .basket_info {
-    grid-area: basket_info;
-    display: grid;
-    min-width: 300px;
-    text-align: center;
-    border-radius: 8px;
-    background-color: rgba(240, 240, 240, 0.8);
-    box-shadow: 0 0 3px black;
-    padding: 6px;
-    margin: 4px;
-    row-gap: 5px;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 50px 50px;
-    grid-template-areas: "pList pList pList" ". total total" "b1 b2 b3";
-    margin-bottom: 46px;
-    column-gap: 10px;
-}
-
-div.page-4 .basket_info button {
-    border-radius: 8px;
-    color: rgb(44, 44, 44);
-    padding: 5px;
-}
-
-div.page-4 .basket_info button:hover {
-    box-shadow: 0 0 2px black;
-}
-
-div.page-4 .basket_info .product_list {
-    grid-area: pList;
-    display: grid;
-    gap: 5px;
-}
-
-.b1 {
-    grid-area: b1;
-    pad: 4px;
-}
-
-.b2 {
-    grid-area: b2;
-}
-
-.b3 {
-    grid-area: b3;
-}
-
-.total_price {
-    grid-area: total;
-    display: grid;
-    align-items: center;
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-    grid-template-areas: ". . dl dl dl" ". . tpInfo1 tpValue tpInfo2";
-    /* dl - delivery cost*/
-}
-
-.delivery {
-    grid-area: dl;
-    display: grid;
-    grid-template-areas: "inf1 cst inf2";
-}
-
-.dlInfo-1 {
-    grid-area: inf1;
-}
-
-.dlInfo-2 {
-    grid-area: inf2;
-}
-
-.dlCost {
-    grid-area: cst;
-}
-
-.tpInfo-1 {
-    grid-area: tpInfo1;
-}
-
-.tpInfo-2 {
-    grid-area: tpInfo2;
-}
-
-.total_price__item {
-    grid-area: tpValue;
-}
-
-.basket_info .product_list .product_list__item {
-    display: grid;
-    align-items: center;
-    border-radius: 8px;
-    box-shadow: 0 0 3px black;
-    background-color: rgba(240, 240, 240, 0.8);
-    grid-template-columns: 1fr 2.5fr 1fr 1fr;
-}
-
-.basket_info .product_list .product_list__item:hover {
-    box-shadow: 0 0 2px black;
-    background-color: rgba(245, 245, 240, 1);
-}
-
-.elt_remove,
-.elt_remove img {
-    border-radius: 5px;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-}
-
-.elt_remove img {
-    width: 40px;
-    margin: 5px;
-}
-
-.elt_remove img:hover {
-    box-shadow: 0 0 10px red;
-}
-
-.close {
-    display: none;
-}
-
-.show {
-    display: grid;
-}
-
-@media screen and (max-width:1650px) {
-    div.page-4 {
-        font-size: 16px;
-    }
-}
-
-@media screen and (max-width:950px) {
-    div.page-4 {
-        font-size: 16px;
-    }
-    div.page-4 .basket_info button {
-        border-radius: 8px;
-        box-shadow: 0 0 2px black;
-        font-size: 16px;
-    }
-    .total_price {
-        grid-template-areas: ". dl dl dl dl" ". tpInfo1 tpValue tpValue tpInfo2";
-    }
-}
+div.page-4{position:fixed;display:grid;width:100vw;height:100vh;grid-template-columns:repeat(5,1fr);grid-template-rows:repeat(3,1fr);z-index:2;background-color:rgba(180,180,180,.9);grid-template-areas:". . . . ." " . . basket_info . ." ". . . . .";align-items:center;overflow-y:scroll;margin-bottom:auto}div.page-4 .basket_info{grid-area:basket_info;display:grid;min-width:300px;text-align:center;border-radius:8px;background-color:rgba(240,240,240,.8);box-shadow:0 0 3px #000;padding:6px;margin:4px;row-gap:5px;grid-template-columns:1fr 1fr 1fr;grid-template-rows:1fr 50px 50px;grid-template-areas:"pList pList pList" ". total total" "b1 b2 b3";margin-bottom:46px;column-gap:10px}div.page-4 .basket_info button{border-radius:8px;color:#2c2c2c;padding:5px}div.page-4 .basket_info button:hover{box-shadow:0 0 2px #000}div.page-4 .basket_info .product_list{grid-area:pList;display:grid;gap:5px}.b1{grid-area:b1;pad:4px}.b2{grid-area:b2}.b3{grid-area:b3}.total_price{grid-area:total;display:grid;align-items:center;grid-template-columns:repeat(5,1fr);grid-template-rows:repeat(2,1fr);grid-template-areas:". . dl dl dl" ". . tpInfo1 tpValue tpInfo2"}.delivery{grid-area:dl;display:grid;grid-template-areas:"inf1 cst inf2"}.dlInfo-1{grid-area:inf1}.dlInfo-2{grid-area:inf2}.dlCost{grid-area:cst}.tpInfo-1{grid-area:tpInfo1}.tpInfo-2{grid-area:tpInfo2}.total_price__item{grid-area:tpValue}.basket_info .product_list .product_list__item{display:grid;align-items:center;border-radius:8px;box-shadow:0 0 3px #000;background-color:rgba(240,240,240,.8);grid-template-columns:1fr 2.5fr 1fr 1fr}.basket_info .product_list .product_list__item:hover{box-shadow:0 0 2px #000;background-color:#f5f5f0}.elt_remove,.elt_remove img{border-radius:5px;-webkit-user-select:none;-khtml-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none}.elt_remove img{width:40px;margin:5px}.elt_remove img:hover{box-shadow:0 0 10px red}.close{display:none}.show{display:grid}@media screen and (max-width:1650px){div.page-4{font-size:16px}}@media screen and (max-width:950px){div.page-4{font-size:16px}div.page-4 .basket_info button{border-radius:8px;box-shadow:0 0 2px #000;font-size:16px}.total_price{grid-template-areas:". dl dl dl dl" ". tpInfo1 tpValue tpValue tpInfo2"}}
