--- a/views/pages/thnx.ejs
+++ b/views/pages/thnx.ejs
@@ -7,7 +7,7 @@
 
 <body>
     <h1>
-        Ваши пироги готовятся и скоро будут доставлены. Спасибо.
+        Заказ принят и ваши пироги скоро будут доставлены. Спасибо.
     </h1>
     <a href="/">Вернуться на главную страницу</a>
 
