--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,5 +1,50 @@
 <meta chartset="utf8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+<meta name='Description' content="Служба доставки пирогов 'Ваши пироги'.
+У нас вы можете закзать пироги на любой вкус: сладкие, овощные и сытные.
+Мы - лучшие в своем деле и это не преувеличение. Это - отзывы наших клиентов.
+Вот уже более пяти лет мы с любовью печём пироги для наших клиентов. Всегда свежие, сытные и вкусные!
+Наши пироги украсят ваш стол и удивят гостей неповторимым вкусом.
+">
+<meta name="keywords" content="
+доставка еды,
+доставка еды Казань,
+сладкие пироги,
+яблочный пирог,
+Пирог с яблоком и брусникой,
+Пирог с вишней,
+Пирог с клубникой,
+Пирог с брусникой,
+Пирог 'Венский',
+Пирог 'День и ночь',
+Пирог 'Нежность',
+Пирог 'Маковый',
+Пирог с черной смородиной,
+Пирог c черникой,
+овощные пироги,
+Пирог с капустой,
+Пирог с капустой и яйцом,
+Пирог с капустой и грибами,
+Пирог с картофелем,
+сытные пироги,
+мясные пироги,
+Пирог с сыром,
+Пирог с сыром и грибами,
+Пирог с курицей,
+Пирог с свининой,
+Пирог с говядиной,
+Пирог 'Жульен',
+Пирог c cёмгой,
+Пирог с индейкой и картофелем,
+Пирог с индейкой и капустой с грибами,
+Пирог с горбушей и картофелем,
+Пирог с судаком и картофелем,
+Пирог с индейкой и рисом с грибами,
+Пирог с горбушей и рисом,
+Пирог с судаком и рисом
+">
+
+<title>Доставка пирогов Казань</title>
 <link rel="stylesheet" type="text/css" href="/css/style.css">
 <link rel="stylesheet" type="text/css" href="/css/navbar.css">
 <link rel="stylesheet" type="text/css" href="/css/page-4.css">
