--- a/views/partials/index/basket.ejs
+++ b/views/partials/index/basket.ejs
@@ -2,13 +2,13 @@
     <div class="product_list"></div>
     <div class="total_price">
         <div class="delivery">
-            <div class="dlInfo-1">Доставка</div>
+            <div class="dlInfo-1">Доставка </div>
             <div class="dlCost">150</div>
             <div class="dlInfo-2"> р.</div>
         </div>
-        <div class="tpInfo-1">Итого:</div>
+        <div class="tpInfo-1">Цена: </div>
         <div class="total_price__item">0</div>
-        <div class="tpInfo-2">руб.</div>
+        <div class="tpInfo-2"> р.</div>
     </div>
     <button class="b1">Скрыть</button>
     <button class="b2">Очистить</button>
