--- a/src/public/css/register_order.css
+++ b/src/public/css/register_order.css
@@ -49,6 +49,12 @@
     padding: 5px;
 }
 
+.ro_city select {
+    /* grid-area: roci; */
+    font-size: 18px;
+    border-radius: 10px;
+}
+
 .ro_delivery {
     grid-area: ro_dl;
     display: grid;
@@ -90,6 +96,7 @@
     height: 40px;
     border-radius: 10px;
     padding: 5px;
+    font-size: 20px;
 }
 
 .ro_footer {
