Added minification of css & js files

--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -45,8 +45,4 @@
 ">
 
 <title>Доставка пирогов Казань</title>
-<link rel="stylesheet" type="text/css" href="/css/style.css">
-<link rel="stylesheet" type="text/css" href="/css/navbar.css">
-<link rel="stylesheet" type="text/css" href="/css/page-4.css">
-<link rel="stylesheet" type="text/css" href="/css/register_order.css">
-<link rel="stylesheet" type="text/css" href="/css/basket_button.css">
+<link rel="stylesheet" type="text/css" href="/css/styles.min.css">
