--- a/views/partials/index/scripts.ejs
+++ b/views/partials/index/scripts.ejs
@@ -1,7 +1,1 @@
-<script type="text/javascript" src="js/pages/index/handlers/button_weight_handler.js"></script>
-<script type="text/javascript" src="js/pages/index/handlers/button_add_to_cart_handler.js"></script>
-<script type="text/javascript" src="js/pages/index/handlers/navbar_click_handler.js"></script>
-<script type="text/javascript" src="js/pages/index/handlers/productCardHandler.min.js"></script>
-<script type="text/javascript" src="js/pages/index/handlers/button_basket_handler.js"></script>
-<script type="text/javascript" src="js/pages/index/alert_cookie.js"></script>
-<script type="text/javascript" src="js/pages/index/index_handler.js"></script>
+<script type="text/javascript" src="js/pages/index/index.min.js"></script>
