--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -7,11 +7,15 @@
 <body>
     <div id="roof"></div>
 
+    <div class="cart">
+        <%- include('../partials/cart.ejs')%>
+    </div>
+
     <div id="page-4" class="page-4" style="display:none">
         <%- include('../partials/index/basket.ejs')%>
     </div>
- 
-    <div id="register_order" class="register_order"  style="display:none">
+
+    <div id="register_order" class="register_order" style="display:none">
         <%- include('../partials/index/register_order.ejs')%>
     </div>
 
