--- a/views/partials/cart.ejs
+++ b/views/partials/cart.ejs
@@ -1,1 +1,5 @@
-<!-- Here will some hypertext -->
+<!-- Cart -->
+<div class="button_basket">
+    <span class="cart_count">0</span>
+    <img src="images/cart.png" alt="Корзина">
+</div>
