--- a/views/partials/menu.ejs
+++ b/views/partials/menu.ejs
@@ -5,13 +5,10 @@
             <a href="#page-1">Сладкие</a>
         </div>
         <div class="navbar_item navbar_item_page-2">
-            <a href="#page-2">Овощные</a>
+            <a href="#page-2">Вкусные</a>
         </div>
         <div class="navbar_item">
             <a href="#page-3">Сытные</a>
-        </div>
-        <div class="navbar_item button_basket">
-            <img src="images/shopping-basket.png" alt="">
         </div>
     </div>
 
