--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -52,9 +52,11 @@ body {
 
 .hInfo a {
     grid-area: hinfo;
-    font-size: 18px;
+    font-size: 20px;
     text-decoration: none;
-    font-weight: 500;
+    font-weight: 700;
+    color: whitesmoke;
+    text-shadow: 0 0 3px black;
 }
 
 .page-1 {
