--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,9 +2,9 @@
     <img src="images/logo.png" alt="" />
     <div class="slogan">Служба доставки пирогов</div>
     <div class="hInfo">
-        Звони:<a href="tel:+78432034545">8(843)203-45-45</a> или <a href="tel:2034545">203-45-45</a>
-        <p>Примём заказов с 8:00 до 18:00</p>
-        <p>Доставка с 9:00 до 20:00</p>
+        Телефон : <a href="tel:2034545">203-45-45</a>
+        <p>Работаем с 9:00 до 20:00</p>
+        <br/>
 
 
     </div>
