--- a/views/pages/thnx.ejs
+++ b/views/pages/thnx.ejs
@@ -2,15 +2,21 @@
 <html>
 
 <head>
-
+    <link rel="stylesheet" type="text/css" href="css/thnx.min.css">
 </head>
 
 <body>
-    <h1>
-        Заказ принят и ваши пироги скоро будут доставлены. Спасибо.
-    </h1>
-    <a href="/">Вернуться на главную страницу</a>
-
+    <div id="thnx">
+        <div class="thnx_grid">
+            <div class="thnx_grid__item">
+                <img src="images/logothnx.jpg" alt="">
+                <h2>Заказ принят</h2>
+                <a href="/">
+                    На главную
+                </a>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
