--- a/src/public/css/cart.css
+++ b/src/public/css/cart.css
@@ -1,7 +1,7 @@
 .cart {
     position: fixed;
     display: grid;
-    right: 25px;
+    right: 5px;
     width: 100px;
     height: 60px;
     border-radius: 6px;
@@ -10,16 +10,19 @@
 
 .cart_count {
     position: absolute;
-    top: 65px;
-    left: 25px;
+    top: 60px;
+    left: 60px;
     width: 25px;
     color: white;
     text-align: center;
     text-shadow: 0 0 1px black;
     font-size: 18px;
     font-weight: bold;
-    background-color: rgba(255, 0, 0, 0.5);
+    background-color: rgba(255, 0, 0, 0.55);
     border-radius: 25px;
     padding: 2px;
-    display: none;
+}
+
+.button_basket>img {
+    width: 90px;
 }
