--- a/views/pages/thnx.ejs
+++ b/views/pages/thnx.ejs
@@ -10,7 +10,7 @@
         <div class="thnx_grid">
             <div class="thnx_grid__item">
                 <img src="images/logothnx.jpg" alt="">
-                <h2>Заказ принят</h2>
+                <div>Заказ принят</div>
                 <a href="/">
                     На главную
                 </a>
