--- a/views/partials/cart.ejs
+++ b/views/partials/cart.ejs
@@ -1,5 +1,8 @@
 <!-- Cart -->
 <div class="button_basket">
-    <span class="cart_count">0</span>
+    <div class="cart_count">
+        <div class="cart_count__item">0</div>
+    </div>
+
     <img src="images/cart.png" alt="Корзина">
 </div>
