--- a/src/public/css/navbar.css
+++ b/src/public/css/navbar.css
@@ -7,7 +7,7 @@ div.navbar {
     background-color: #F7E8D8;
     grid-template-areas: ". links .";
     box-shadow: 0 0 5px rgba(50, 50, 50, 0.5);
-    height: 70px;
+    height: 50px;
     border-radius: 5px 5px 0 0;
 }
 
@@ -15,13 +15,15 @@ div.navbar {
     grid-area: links;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: 40px;
     gap: 5px;
     align-items: center;
 }
 
 .navbar_item {
+    position: relative;
     border-radius: 0 0 10px 10px;
-    height: 70px;
+    height: 40px;
     justify-content: center;
     background-color: #ebddcb;
 }
@@ -35,10 +37,13 @@ div.navbar {
     text-align: center;
     display: block;
     padding: 5px;
-    height: 70px;
-    top: 10px;
-    font-size: 20px;
+    height: 40px;
+    font-size: 18px;
     font-weight: 600;
     text-decoration: none;
-    color: rgba(43, 33, 13, 1);
+    color: var(--main-font-color);
+}
+
+.navbar_item a:active {
+    background-color: none;
 }
