--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,12 +1,4 @@
 <div class="logo">
-    <img src="images/logo.png" alt="" />
-    <div class="slogan">Служба доставки пирогов</div>
-    <div class="hInfo">
-        Телефон : <a href="tel:2034545">203-45-45</a>
-        <p>Работаем с 9:00 до 20:00</p>
-        <br/>
-
-
-    </div>
-
+    <img src="images/logo.jpg" alt="" />
+    <div class="city">Казань</div>
 </div>
