--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -2,6 +2,7 @@
     --main-bg-color: #faf0e4;
     --main-font-color: #532921;
     --sec-font-color: #c3651f;
+    --main-hf-shadow: rgba(83, 41, 33, 0.5);
 }
 
 * {
@@ -40,6 +41,8 @@ body {
     grid-area: header;
     display: grid;
     background: white;
+    box-shadow: 0 0 8px var(--main-hf-shadow);
+    border-radius: 0 0 5px 5px;
     grid-template-areas: "logo";
 }
 
