--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -46,3 +46,4 @@
 
 <title>Доставка пирогов Казань</title>
 <link rel="stylesheet" type="text/css" href="/css/styles.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
