--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,4 +1,12 @@
 <div class="logo">
-    <img src="images/logo.jpg" alt="" />
-    <div class="city">Казань</div>
+    <div>
+        <img src="images/logo.jpg" alt="" />
+        <div class="city">Казань</div>
+    </div>
+
+</div>
+<div class="">Доставка от 1000 руб. бесплатно</div>
+<div class="">Режим работы с 9 до 20:00</div>
+<div class="phoneLink">
+    <a href="tel:203-45-45">203-45-45</a>
 </div>
