--- a/views/partials/index/register_order.ejs
+++ b/views/partials/index/register_order.ejs
@@ -24,7 +24,7 @@
 
     <div class="ro_contact">
         <div class="ro_city">
-            <select style="text-align:center;color:green;">
+            <select >
                 <option  disabled>Выберите город</option>
                 <option selected value="kazan">Казань</option>
             </select>
