--- a/src/public/css/cart.css
+++ b/src/public/css/cart.css
@@ -1,15 +1,14 @@
 .cart {
-    margin-top: 10px;
+    margin-top: 5px;
     position: fixed;
     display: grid;
     right: 0;
-    width: 70px;
+    width: 65px;
     border-radius: 6px;
     grid-template-columns: repeat(2, 1fr);
 }
 
 .cart_count {
-    z-index: 1;
     position: absolute;
     top: 35px;
     left: 10px;
@@ -20,6 +19,11 @@
     text-align: center;
     justify-content: center;
     padding-top: 2px;
+}
+
+.head_delivery a {
+    text-decoration: none;
+    color: var(--main-font-color);
 }
 
 .button_basket>img {
