--- a/src/public/css/thnx.css
+++ b/src/public/css/thnx.css
@@ -1,3 +1,12 @@
+@font-face {
+    font-family: 'RawerCR';
+    src: url('../fonts/RawerCR.ttf');
+}
+
+body {
+    font-family: 'RawerCR', Helvetica, sans-serif;
+}
+
 .thnx_grid {
     display: grid;
     align-items: center;
