Added scroll animation

--- a/views/partials/menu.ejs
+++ b/views/partials/menu.ejs
@@ -1,13 +1,13 @@
 <!-- Navigation menu -->
 <div class="navbar">
     <div class="navbar_links">
-        <div class="navbar_item">
+        <div class="navbar_item nbi1">
             <a href="#page-1">Сладкие</a>
         </div>
-        <div class="navbar_item navbar_item_page-2">
+        <div class="navbar_item nbi2">
             <a href="#page-2">Вкусные</a>
         </div>
-        <div class="navbar_item">
+        <div class="navbar_item nbi3">
             <a href="#page-3">Сытные</a>
         </div>
     </div>
