--- a/views/pages/thnx.ejs
+++ b/views/pages/thnx.ejs
@@ -3,6 +3,7 @@
 
 <head>
     <link rel="stylesheet" type="text/css" href="/css/thnx.min.css">
+    <%-include('../partials/favicons.ejs')%>
 </head>
 
 <body>
