--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -47,3 +47,4 @@
 <title>Доставка пирогов Казань</title>
 <link rel="stylesheet" type="text/css" href="/css/styles.min.css">
 <script src="js/jquery.min.js"></script>
+<%-include('favicons.ejs')%>
